<resources>
    <string name="app_name">Actividad1</string>
    <string name="nombre_usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrar">Registrar</string>
    <string name="nombre_usuario_registrar">Usuario</string>
    <string name="clave_registrar">Clave</string>
    <string name="email_registrar">Email</string>
    <string name="boton_registrar">Registrar</string>
    <string name="juca_logo">Juca Logo</string>
    <string name="registrar_estudiante">Registrar Estudiante</string>
    <string name="borrar_estudiante">Eliminar Estudiante</string>
    <string name="nombre_estudiante">Nombre Estudiante</string>
    <string name="cedula_estudiante">Cedula Estudiante</string>
    <string name="editar_estudiante">Editar Estudiante</string>
    <string name="obtener_hora">Obtener hora</string>
    <string name="hora_amsterdam">Hora en Amsterdam</string>
</resources>