<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarEstudiante">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/cedula_estudiante"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtCedulaEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Cedula" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/nombre_estudiante"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtNombreEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Nombre" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="EditarEstudianteNuevo"
        android:text="@string/editar_estudiante" />
</LinearLayout>