<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarEstudiante"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/nombre_estudiante"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtNombreEstudiante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Nombre" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/cedula_estudiante"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtCedulaEstudiante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Cedula" />

    <Button
        android:id="@+id/btnRegistrarEstudiante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="RegistrarEstudianteNuevo"
        android:text="@string/registrar_estudiante" />
</LinearLayout>